--- a/build.gradle
+++ b/build.gradle
@@ -28,10 +28,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
-	implementation 'org.liquibase:liquibase-core'
+  implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
+
+  implementation 'org.liquibase:liquibase-core'
 	implementation 'com.zaxxer:HikariCP:5.1.0'
 
-	compileOnly 'org.projectlombok:lombok'
+  implementation 'io.jsonwebtoken:jjwt:0.12.3'
+
+  compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
 
