--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
   implementation 'org.springframework.boot:spring-boot-starter-mail'
+  implementation 'org.springframework.boot:spring-boot-starter-validation'
   developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
   implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
